--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-.idea
-.vscode
+/.idea/
+/.vscode/
 /bin/
-.*
+/.*/
+/.settings/
